# vex-explorer

./: .dockerignore  .gitignore  AUDIT.md  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT_REPORT.md  LICENSE  PROVNAI_STACK_OVERVIEW.md  README.md  VERIFIER_AUDIT_FEEDBACK.md  VERIFIER_HANDOFF.md  VEX_EXPLORER_RELEASE_CHECKLIST.md  eslint.config.mjs  lint_results.json  next.config.ts  package-lock.json  package.json  railway.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  VEP_FORMAT.md
public/: manifest.json  sw.js
src/app/: layout.tsx  page.tsx
src/components/: ServiceWorkerRegistration.tsx
src/components/verification/: DropZone.tsx  PillarCard.tsx  ResultDashboard.tsx  VerificationStatus.tsx
src/lib/wasm/: README.md  package.json  wasm_vex.d.ts  wasm_vex.js  wasm_vex_bg.wasm  wasm_vex_bg.wasm.d.ts
src/types/: verification.ts
vex-verify/: Cargo.toml
vex-verify/src/: lib.rs
wasm-vex/: Cargo.toml
wasm-vex/src/: lib.rs
