[package]
name = "wasm-vex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
